# videgrenier

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yml  functional_tests.py  manage.py  pyproject.toml  requirements-prod.in  requirements-prod.txt  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: test.yml
caracole/: admin.py  backends.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
caracole/fixtures/sites_migrations/: 0001_initial.py  0002_caracole_ttw.py  0003_caracole_io.py
caracole/migrations/: 0001_initial.py  0002_auto_20160506_2039.py  0003_auto_20160518_2314.py  0004_help_text.py
caracole/static/css/: caracole.css
caracole/templates/: _form.html  base.html  base_wo_messages.html  delete.html  form.html  forms.html  home.html
caracole/templates/auth/: user_detail.html
caracole/templates/registration/: activation_email.html  activation_email.txt  login.html  password_change_form.html  password_reset_complete.html  password_reset_email.html  password_reset_email.txt  password_reset_form.html  registration_form.html
caracole/templatetags/: caracole.py
conf/: gunicorn.conf.py  nginx
testproject/: settings.py  tests.py  urls.py
testproject/templates/: base.html
videgrenier/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
videgrenier/migrations/: 0001_initial.py  0002_auto_20160506_2150.py  0002_phone_number_regex.py  0003_auto_20160518_2314.py  0003_auto_20210401_0221.py  0004_help_text.py  0005_missing_fields.py
videgrenier/templates/: videgrenier.html
videgrenier/templates/videgrenier/: apres.html  avant.html  base.html  fini.html  home.html  mail.html  mail.md  mail.txt  plan.html  reglement.html  reservation_confirm_delete.html  reservation_detail.html  reservation_form.html  reservation_list.html
