[tool.poetry]
name = "videgrenier"
version = "2.1.0"
description = "Vide Grenier"
authors = ["Guilhem Saurel <webmaster@caracole.io>"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ndh = "^5.12.1"
dmdm = "^2.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^5.5"
flake8 = "^3.9.0"
ipython = "^8.11.0"
pygments-zenburn = "^0.9.0"
safety = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
