[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <webmaster@caracole.io>"]
description = "Vide Grenier"
license = "BSD-2-Clause"
name = "videgrenier"
readme = "README.md"
version = "2.1.0"

[tool.poetry.dependencies]
dmdm = "^2.0.3"
ipython = "^8.11.0"
ndh = "^5.12.1"
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
coverage = "^7.2.1"
isort = "^5.12.0"
pygments-zenburn = "^0.9.0"
ruff = "^0.0.254"
safety = {allow-prereleases = true, version = "^2.4.0b1"}

[tool.ruff]
allowed-confusables = [" ", "’"]
extend-exclude = ["migrations"]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py310"

[tool.tomlsort]
all = true
