[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
known_django = "django"
profile = "black"
sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.poetry]
authors = ["Guilhem Saurel <webmaster@caracole.io>"]
description = "Vide Grenier"
license = "BSD-2-Clause"
name = "videgrenier"
readme = "README.md"
version = "2.1.0"

[tool.poetry.dependencies]
dmdm = "^2.0.3"
ipython = "^8.13.1"
ndh = "^6.2.0"
python = "^3.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
coverage = "^7.2.5"
isort = "^5.12.0"
pygments-zenburn = "^0.9.0"
ruff = "^0.0.264"
safety = {allow-prereleases = true, version = "^2.4.0b1"}

[tool.ruff]
allowed-confusables = [" ", "’"]
extend-exclude = ["migrations"]
extend-ignore = ["D203", "D213"]
extend-select = ["A", "B", "C", "COM", "DJ", "EM", "EXE", "G", "N", "PTH", "RET", "RUF", "UP", "W", "YTT"]
target-version = "py310"

[tool.tomlsort]
all = true
